Fix gap

--- a/textarea-component/css/style.css
+++ b/textarea-component/css/style.css
@@ -38,7 +38,7 @@ body {
 .textarea-variants {
   display: flex;
   flex-direction: column;
-  gap: 48px;
+  gap: 32px;
   width: 340px;
 }
 
